--- a/404.html
+++ b/404.html
@@ -1,4 +1,12 @@
-<!doctype html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/favicon.ico"><script>// MIT License
+<!DOCTYPE html>
+<html lang="">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <script type="text/javascript">
+      // MIT License
       // https://github.com/rafgraph/spa-github-pages
       // This script checks to see if a redirect is present in the query string,
       // converts it back into the correct url and adds it to the
@@ -16,4 +24,15 @@
               l.pathname.slice(0, -1) + decoded + l.hash
           );
           }
-      }(window.location))</script><title>cenebell</title><script defer="defer" src="/js/chunk-vendors.d1760df6.js"></script><script defer="defer" src="/js/app.3667426c.js"></script><link href="/css/chunk-vendors.69033938.css" rel="stylesheet"><link href="/css/app.6005419a.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but cenebell doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div></body></html>
+      }(window.location))
+      </script>
+    <title><%= htmlWebpackPlugin.options.title %></title>
+  </head>
+  <body>
+    <noscript>
+      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+    </noscript>
+    <div id="app"></div>
+    <!-- built files will be auto injected -->
+  </body>
+</html>
