--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/favicon.ico"><script>// MIT License
+<!doctype html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/cenebell/favicon.ico"><script>// MIT License
       // https://github.com/rafgraph/spa-github-pages
       // This script checks to see if a redirect is present in the query string,
       // converts it back into the correct url and adds it to the
@@ -16,4 +16,4 @@
               l.pathname.slice(0, -1) + decoded + l.hash
           );
           }
-      }(window.location))</script><title>cenebell</title><script defer="defer" src="/js/chunk-vendors.d1760df6.js"></script><script defer="defer" src="/js/app.3667426c.js"></script><link href="/css/chunk-vendors.69033938.css" rel="stylesheet"><link href="/css/app.6005419a.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but cenebell doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div></body></html>
+      }(window.location))</script><title>cenebell</title><script defer="defer" src="/cenebell/js/chunk-vendors.d1760df6.js"></script><script defer="defer" src="/cenebell/js/app.5062695f.js"></script><link href="/cenebell/css/chunk-vendors.df528409.css" rel="stylesheet"><link href="/cenebell/css/app.6005419a.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but cenebell doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div></body></html>
