--- a/index.html
+++ b/index.html
@@ -16,4 +16,4 @@
               l.pathname.slice(0, -1) + decoded + l.hash
           );
           }
-      }(window.location))</script><title>cenebell</title><script defer="defer" src="/cenebell/js/chunk-vendors.d1760df6.js"></script><script defer="defer" src="/cenebell/js/app.5062695f.js"></script><link href="/cenebell/css/chunk-vendors.df528409.css" rel="stylesheet"><link href="/cenebell/css/app.6005419a.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but cenebell doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div></body></html>
+      }(window.location))</script><title>Cenebell</title><script defer="defer" src="/cenebell/js/chunk-vendors.d1760df6.js"></script><script defer="defer" src="/cenebell/js/app.5062695f.js"></script><link href="/cenebell/css/chunk-vendors.df528409.css" rel="stylesheet"><link href="/cenebell/css/app.6005419a.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but Cenebell doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div></body></html>
