--- a/public/index.html
+++ b/public/index.html
@@ -26,11 +26,11 @@
           }
       }(window.location))
       </script>
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>Cenebell</title>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but Cenebell doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
